Fix overflow

--- a/style.css
+++ b/style.css
@@ -608,7 +608,7 @@ a.not-underlined {
 
 /* About */
 .content-container {
-  width: 100%;
+  width: 97%;
   margin: 0;
   overflow-y: scroll;
   padding-right: 20px;
@@ -716,7 +716,6 @@ th:last-child, td:last-child {
   .section-wrapper {
     height: 100%;
     width: 100%;
-    overflow: hidden;
     margin: 10px 20px 20px 20px;
   }
 
@@ -732,10 +731,6 @@ th:last-child, td:last-child {
   h4 {
     line-height: 65px;
     font-size: 60px;
-  }
-
-  .content-container {
-    margin: 0;
   }
   
   .control-details-wrapper {
